Add template-card and replace templates from json

--- a/kurs-karten.html
+++ b/kurs-karten.html
@@ -9,10 +9,7 @@
   <body>
     <h1>Kurs Karten</h1>
     <div>
-      <figure>
-        <h2>Kursname</h2>
-        <p>Kursbeschreibung</p>
-      </figure>
+      {%CARDS%}
     </div>
     <p>
       <a href="/">Zurück zur Kurseingabe</a>
